# atomr-physical

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  deny.toml  pyproject.toml
.cargo/: config.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  docs.yml  release.yml  version-bump.yml
ai-skills/: README.md  plugin.json
ai-skills/skills/atomr-physical-actuation/: SKILL.md
ai-skills/skills/atomr-physical-python/: SKILL.md
ai-skills/skills/atomr-physical-quickstart/: SKILL.md
ai-skills/skills/atomr-physical-robotics/: SKILL.md
ai-skills/skills/atomr-physical-ros2/: SKILL.md
ai-skills/skills/atomr-physical-sensing/: SKILL.md
ai-skills/skills/atomr-physical-troubleshooting/: SKILL.md
crates/actuation/: Cargo.toml
crates/actuation/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/control/: Cargo.toml
crates/control/src/: fsm.rs  imu_reading.rs  joint_feedback.rs  lib.rs  loop_rate.rs  lqr.rs  pendulum.rs  pid.rs
crates/core/: Cargo.toml
crates/core/src/: command.rs  device.rs  error.rs  ids.rs  lib.rs  reading.rs  units.rs
crates/hal/: Cargo.toml
crates/hal/src/: error.rs  lib.rs
crates/hal/src/bus/: can.rs  i2c.rs  mod.rs  spi.rs
crates/hal/src/drivers/: as5048a.rs  bno085.rs  mod.rs  odrive.rs  qdd_mit.rs
crates/hal/src/loopback/: mod.rs
crates/kinematics/: Cargo.toml
crates/kinematics/src/: chain.rs  error.rs  forward.rs  inverse.rs  jacobian.rs  lib.rs  pose.rs  ros2.rs
crates/projection/: Cargo.toml
crates/projection-client/: Cargo.toml  README.md
crates/projection-client/contrib/: atomr-projection-client.service
crates/projection-client/src/: main.rs
crates/projection/src/: actor.rs  config_template.rs  display.rs  lib.rs  mdns.rs  pairing.rs  ports.rs  sunshine.rs
crates/projection/tests/: projection_actor.rs
crates/py-bindings/: Cargo.toml
crates/py-bindings/src/: actuation.rs  core.rs  errors.rs  lib.rs  robotics.rs  ros2.rs  sensing.rs
crates/robotics/: Cargo.toml
crates/robotics/src/: lib.rs
crates/ros2/: Cargo.toml
crates/ros2/src/: action.rs  bridge.rs  clock.rs  encoders.rs  endpoint.rs  error.rs  lib.rs  param.rs  plan.rs  qos.rs  service.rs  topic_map.rs  validate.rs
crates/ros2/src/actors/: action.rs  mod.rs  node.rs  param.rs  publisher.rs  service.rs  subscriber.rs  testing.rs
crates/ros2/src/codec/: builtin.rs  mod.rs  payload.rs  unit_map.rs
crates/ros2/src/transport/: mock.rs  mod.rs  rclrs.rs
crates/ros2/tests/: rclrs_integration.rs
crates/sdr/: Cargo.toml  README.md
crates/sdr/src/: actor.rs  config.rs  driver.rs  error.rs  iq.rs  lib.rs  messages.rs  persist.rs  runner.rs
crates/sdr/tests/: actor.rs  sigmf.rs
crates/sensing/: Cargo.toml
crates/sensing/src/: lib.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs  sdr_mock.rs
crates/umbrella/: Cargo.toml
crates/umbrella/src/: lib.rs
docs/: architecture.md  feature-matrix.md  index.md  projection.md  python-api.md  release-pipeline.md  release-process.md  ros2-bridge-progress.md  ros2-bridge.md  sdr.md
python/atomr_physical/: __init__.py  actuation.py  core.py  errors.py  robotics.py  ros2.py  sensing.py
python/atomr_physical/tests/: test_smoke.py
xtask/: Cargo.toml
xtask/src/: main.rs
