[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/sensing",
    "crates/actuation",
    "crates/robotics",
    "crates/ros2",
    "crates/testkit",
    "crates/py-bindings",
    "crates/cli",
    "crates/umbrella",
    "xtask",
]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.78"
license       = "Apache-2.0"
repository    = "https://github.com/rustakka/atomr-physical"
homepage      = "https://github.com/rustakka/atomr-physical"
documentation = "https://docs.rs/atomr-physical"
authors       = ["atomr-physical contributors"]
readme        = "README.md"

[workspace.dependencies]
# Async / runtime
tokio        = { version = "1.39", features = ["full"] }
async-trait  = "0.1"
futures      = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Concurrency primitives
parking_lot = "0.12"
arc-swap    = "1.7"
dashmap     = "6"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bytes      = "1"

# Error handling
thiserror = "1"
anyhow    = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Time / utility
url       = { version = "2", features = ["serde"] }
once_cell = "1"
uuid      = { version = "1", features = ["v4", "serde"] }
chrono    = { version = "0.4", default-features = false, features = ["clock", "serde"] }
semver    = { version = "1", features = ["serde"] }

# Testing
proptest = "1"

# Python bindings (optional)
pyo3                = { version = "0.22", default-features = false, features = ["macros"] }
pyo3-async-runtimes = { version = "0.22", default-features = false, features = ["tokio-runtime"] }

# Sibling atomr workspace ---------------------------------------------------
# atomr is the actor-runtime substrate. atomr-physical consumes it as a
# public crates.io dependency — never a `path = "../atomr"` link — so
# the build is self-contained and CI needs no side-by-side checkout
# (the same convention atomr-agents follows). Bump these in lockstep
# with atomr releases. For local development against an unreleased
# atomr change, use a `[patch.crates-io]` override in your personal
# `~/.cargo/config.toml` rather than reintroducing path-deps.
atomr           = "0.9.2"
atomr-core      = "0.9.2"
atomr-macros    = "0.9.2"
atomr-telemetry = "0.9.2"
atomr-streams   = "0.9.2"

# Internal crates -----------------------------------------------------------
# All publishable crates live under the `atomr-physical-*` namespace.
# Lib names follow `atomr_physical_X` (snake_case of the package name),
# so source code imports them as `use atomr_physical_X::*`.
atomr-physical-core      = { path = "crates/core",       version = "0.1.0" }
atomr-physical-sensing   = { path = "crates/sensing",    version = "0.1.0" }
atomr-physical-actuation = { path = "crates/actuation",  version = "0.1.0" }
atomr-physical-robotics  = { path = "crates/robotics",   version = "0.1.0" }
atomr-physical-ros2      = { path = "crates/ros2",       version = "0.1.0" }
atomr-physical-testkit   = { path = "crates/testkit",    version = "0.1.0" }
atomr-physical           = { path = "crates/umbrella",   version = "0.1.0" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
