[package]
name          = "xtask"
version       = { workspace = true }
edition       = { workspace = true }
publish       = false
description   = "Workspace tooling for atomr-physical: audit, bump, release-checklist."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap   = { workspace = true }
anyhow = { workspace = true }
