[package]
name          = "atomr-physical-actuation"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "Actuator-side actors for atomr-physical: safety envelopes, command queues, and the ActuatorActor that adapts an Actuator driver into a supervised atomr actor."

keywords      = ["robotics", "actuators", "atomr", "actor", "ros2"]
categories    = ["science::robotics", "asynchronous"]
readme        = "../../README.md"

[dependencies]
atomr-physical-core = { workspace = true }
atomr-core          = { workspace = true }
serde               = { workspace = true }
tokio               = { workspace = true }
async-trait         = { workspace = true }
tracing             = { workspace = true }

[dev-dependencies]
atomr-physical-testkit = { workspace = true }
