[package]
name          = "atomr-physical-cli"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "atomr-physical CLI: inspect devices, take readings, dispatch commands, and plan the ROS2 bridge."

keywords      = ["robotics", "cli", "atomr", "ros2", "sensors"]
categories    = ["command-line-utilities", "science::robotics"]
readme        = "../../README.md"

[[bin]]
name = "atomr-physical"
path = "src/main.rs"
# The binary normalises to `atomr_physical`, colliding with the umbrella
# crate's lib doc target under `cargo doc --workspace`. A CLI binary has
# no rustdoc API surface — its interface is `--help` and docs/ — so skip
# rustdoc for it and let the umbrella own that doc path.
doc = false

[dependencies]
atomr-physical-core      = { workspace = true }
atomr-physical-sensing   = { workspace = true }
atomr-physical-actuation = { workspace = true }
atomr-physical-robotics  = { workspace = true }
atomr-physical-ros2      = { workspace = true }
clap                     = { workspace = true }
tokio                    = { workspace = true }
anyhow                   = { workspace = true }
tracing                  = { workspace = true }
tracing-subscriber       = { workspace = true }

[features]
default = []
# Build the CLI against the live ROS2 bridge — `ros2 spin` drives a real
# `rclrs` node. Requires a ROS 2 Jazzy toolchain on the build host.
rclrs = ["atomr-physical-ros2/rclrs"]
