[package]
name          = "atomr-physical-projection-client"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "Remote node companion for atomr-physical-projection: discovers Sunshine streams via mDNS, pairs against them, and launches moonlight-embedded."

keywords      = ["streaming", "moonlight", "sunshine", "atomr", "robotics"]
categories    = ["command-line-utilities", "multimedia"]
readme        = "README.md"

[[bin]]
name = "atomr-projection-client"
path = "src/main.rs"

[dependencies]
atomr-physical-core = { workspace = true }
clap                = { workspace = true }
tokio               = { workspace = true }
reqwest             = { workspace = true }
mdns-sd             = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
anyhow              = { workspace = true }
rand                = { workspace = true }
regex               = { workspace = true }
uuid                = { workspace = true }
