[package]
name          = "atomr-physical-projection"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "Projection output actors for atomr-physical: Sunshine/Moonlight orchestration as a supervised atomr actor tree, with vkms virtual displays, mDNS discovery, and auto-pairing."

keywords      = ["robotics", "streaming", "sunshine", "moonlight", "atomr"]
categories    = ["science::robotics", "asynchronous", "multimedia"]
readme        = "../../README.md"

[dependencies]
atomr-physical-core = { workspace = true }
atomr-core          = { workspace = true }
async-trait         = { workspace = true }
tokio               = { workspace = true }
tracing             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
url                = { workspace = true }
uuid               = { workspace = true }
reqwest            = { workspace = true }
mdns-sd            = { workspace = true }
tempfile           = { workspace = true }
nix                = { workspace = true }
rand               = { workspace = true }

[dev-dependencies]
atomr-config       = { workspace = true }
tokio              = { workspace = true, features = ["full", "macros", "rt-multi-thread", "test-util"] }
