[package]
name          = "atomr-physical-ros2"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "ROS2 bridge for atomr-physical: maps sensor/actuator/robot actors onto the ROS2 topic, service, and action graph."

keywords      = ["ros2", "robotics", "atomr", "actor", "bridge"]
categories    = ["science::robotics", "asynchronous"]
readme        = "../../README.md"

[dependencies]
atomr-physical-core      = { workspace = true }
atomr-physical-sensing   = { workspace = true }
atomr-physical-actuation = { workspace = true }
atomr-physical-robotics  = { workspace = true }
atomr-core               = { workspace = true }
serde                    = { workspace = true }
tokio                    = { workspace = true }
tracing                  = { workspace = true }

# The `rclrs` client library lives behind the matching feature flag so
# the rest of the workspace builds without a ROS 2 toolchain. With
# `dyn_msg` enabled the bridge can construct publishers / subscriptions
# from a topic-type **string** (the form `TopicMap` already stores) so
# we don't need colcon-generated message crates to compile.
rclrs   = { version = "0.7", optional = true }
futures = { workspace = true, optional = true }

[features]
default = []
# Phase 2: links the `rclrs` ROS2 client library and implements
# `Ros2Bridge::spin` against a live ROS2 graph. Requires a ROS2
# installation on the build host (sourced via
# `~/ros2_jazzy/install/setup.bash` or `/opt/ros/<distro>/setup.bash`)
# — the build script needs the `rcl` / `rmw` / `rosidl` headers and the
# `dyn_msg` runtime needs the type-introspection `.so`s. Off by default
# so the workspace still builds anywhere.
rclrs = ["dep:rclrs", "dep:futures"]
