[package]
name          = "atomr-physical-testkit"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "Test doubles for atomr-physical: MockSensor and MockActuator implementing the device-contract traits with in-memory behaviour."

keywords      = ["robotics", "testing", "mock", "atomr", "actor"]
categories    = ["science::robotics", "development-tools::testing"]
readme        = "../../README.md"

[dependencies]
atomr-physical-core = { workspace = true }
atomr-physical-sdr  = { workspace = true, optional = true }
async-trait         = { workspace = true }
tokio               = { workspace = true, optional = true }
chrono              = { workspace = true, optional = true }

[features]
default = []
# Enables `MockSdrDriver` — pulls in the SDR crate so the mock can
# implement its `SdrBackend` trait.
sdr     = ["dep:atomr-physical-sdr", "dep:tokio", "dep:chrono"]

[dev-dependencies]
tokio = { workspace = true }
