[package]
name          = "atomr-physical"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "Physical sensing, output, and ROS2-integrated robotics as native atomr actors, with a first-class Python API overlay."

keywords      = ["robotics", "ros2", "sensors", "actuators", "atomr"]
categories    = ["science::robotics", "asynchronous"]
readme        = "../../README.md"

[dependencies]
atomr-physical-core      = { workspace = true }
atomr-physical-sensing   = { workspace = true, optional = true }
atomr-physical-actuation = { workspace = true, optional = true }
atomr-physical-robotics  = { workspace = true, optional = true }
atomr-physical-ros2      = { workspace = true, optional = true }
atomr-physical-testkit   = { workspace = true, optional = true }

[features]
default = ["sensing", "actuation", "robotics"]
sensing   = ["dep:atomr-physical-sensing"]
actuation = ["dep:atomr-physical-actuation"]
robotics  = ["dep:atomr-physical-robotics", "sensing", "actuation"]
ros2      = ["dep:atomr-physical-ros2", "robotics"]
testkit   = ["dep:atomr-physical-testkit"]
# `rclrs` forwards to the ros2 crate's live-bridge feature; it requires
# a ROS2 installation on the build host.
rclrs     = ["ros2", "atomr-physical-ros2/rclrs"]
full      = ["sensing", "actuation", "robotics", "ros2", "testkit"]
